# rce-shield

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
rce_shield/: __init__.py  cli.py
rce_shield/core/: __init__.py  monitor.py  reporter.py  scanner.py
rce_shield/scanners/: __init__.py  anticheat.py  launchers.py  mods.py  network.py  overlays.py  peripherals.py
rce_shield/utils/: __init__.py  hashing.py  platform.py  process.py
tests/: test_core.py  test_scanners.py
